--- a/index.html
+++ b/index.html
@@ -30,7 +30,6 @@
       <header class="recipe-image">
         <img src="./assets/images/image-omelette.jpeg" alt="Omelette" />
       </header>
-
       <div class="recipe-text">
         <section class="introduction">
         <h1 class="heading">Simple Omelette Recipe</h1>
@@ -148,11 +147,11 @@
       </details>
     </main>
 
-    <div class="attribution">
+    <footer class="attribution">
       Challenge by
       <a href="https://www.frontendmentor.io?ref=challenge" target="_blank"
         >Frontend Mentor</a
       >. Coded by <a href="#">Chamin</a>.
-    </div>
+    </footer>
   </body>
 </html>
