corrected text error

--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
             <span class="list-subtitle">Fold and serve</span>: As the omelette
             continues to cook, carefully lift one edge and fold it over the
             fillings. Let it cook for another minute, then slide it onto a
-            plate. Enjoy: Serve hot, with additional salt and pepper if needed. 
+            plate.
           </span>
           </li>
           <li><span class="list-text">
