Fixed nutrition padding

--- a/index.html
+++ b/index.html
@@ -126,19 +126,19 @@
         <table class="nutrition-table">
           <tbody>
             <tr>
-              <td class="top-cell">Calories</td>
+              <td class="nutrition-item top-cell">Calories</td>
               <td class="nutrition-detail top-cell">277kcal</td>
             </tr>
             <tr>
-              <td>Carbs</td>
+              <td class="nutrition-item">Carbs</td>
               <td class="nutrition-detail">0g</td>
             </tr>
             <tr>
-              <td>Protein</td>
+              <td class="nutrition-item">Protein</td>
               <td class="nutrition-detail">20g</td>
             </tr>
             <tr>
-              <td class="bottom-cell">Fat</td>
+              <td class="nutrition-item bottom-cell">Fat</td>
               <td class="nutrition-detail bottom-cell">22g</td>
             </tr>
           </tbody>
